syntax = "proto3";

package telemetry.module.network.v1;

option go_package = "telemetry/agent/modules/network/pb;networkpb";

message CollectorSpec {
  string category = 1;
  string interval = 2;
}

message ModuleRegistration {
  repeated CollectorSpec collectors = 1;
}

message InterfaceMetrics {
  string name = 1;
  repeated string ips = 2;
  uint64 rx_bytes = 3;
  uint64 rx_packets = 4;
  uint64 tx_bytes = 5;
  uint64 tx_packets = 6;
  int64 sampled_at_unix_nano = 7;
}

message Metrics {
  repeated InterfaceMetrics interfaces = 1;
}
